--- a/gb/12/5/12/n3587207.md
+++ b/gb/12/5/12/n3587207.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/injttp3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/injttp3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/injttp3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/injttp3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/injttp3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/injttp3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/injttp3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/injttp3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>犹太人作曲家：一生都在等待法轮大法</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/05/1205111612122494-600x400.jpg" />
 <h6>2012年5月10日，来自以色列的Ora在联合国总部对面的公园炼功庆祝法轮大法日。（摄影：戴兵/大纪元）
 </h6>
 <hr>
-<p>【大纪元2012年05月12日讯】（大纪元记者杜国辉纽约报导）2012年的5月13日是世界法轮大法日，也是<ahref="https://github.com/injttp3586/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%B4%AA%E4%BC%A0.md#1">法轮大法洪传</a>20周年纪念日。5月11日上午，2,000多名来自全世界100多个国家的法轮功学员在联合国总部前的广场上集体炼功，拉开了系列庆祝活动的序幕。 来自以色列的法轮功学员Ora高兴地分享了她修炼法轮功以来的感受 ，并呼吁各界帮助停止对法轮功迫害。</p>
+<p>【大纪元2012年05月12日讯】（大纪元记者杜国辉纽约报导）2012年的5月13日是世界法轮大法日，也是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%B4%AA%E4%BC%A0.md#1">法轮大法洪传</a>20周年纪念日。5月11日上午，2,000多名来自全世界100多个国家的法轮功学员在联合国总部前的广场上集体炼功，拉开了系列庆祝活动的序幕。 来自以色列的法轮功学员Ora高兴地分享了她修炼法轮功以来的感受 ，并呼吁各界帮助停止对法轮功迫害。</p>
 <p>Ora是一名以色列作曲家。2001年她在美国接到了一位在同在美国的以色列朋友的电话，向她推荐法轮大法。她朋友是在学炼法轮大法半年后，感觉法轮大法是真正的高德功法，而不是一般骗钱的气功后才推荐她学炼法轮大法。</p>
 <p>那时Ora也不懂得法轮功是什么，只觉得自己一生好像就在等着听到“法轮功”这三个字。她当时就说：“为此我等了一生﹗”后来她才明白，自己一生都在等着修炼法轮大法。</p>
 <p>放下朋友的电话，她就拨电话到书店订购法轮大法经书。书店离她住家有一个半小时的车程。她开了3个小时的车往返书店将法轮大法的著作“请”回家。由于她家附近没有炼功点，她要求朋友在电话上教她炼功动作，朋友深感为难。当时她也没有互联网，无法上网看功法示范。她在很短时间内就看完一遍书。读完书后，她发现自己在没人教导的情况就会炼功了。后来她是回到了以色列正式学习五套功法。</p>
@@ -22,48 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/12/5/5/n3581747.md#1">加拿大总理 政要祝贺法轮大法洪传20周年</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/12/5/7/n3582961.md#1">香港游行庆大法洪传 中港民众齐支持</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/12/5/8/n3583692.md#1">洛杉矶欢庆世界法轮大法日</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/12/5/9/n3584596.md#1">波士顿庆世界法轮大法日 有缘人喜得法</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/12/5/11/n3586649.md#1">大陆法轮功学员恭祝法轮大法洪传二十周年（三）</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694735.md#1">死亡案例预警 老人接种疫苗风险</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694725.md#1">中国守诺美国违约? 谷歌翻译惹议</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694794.md#1">华人少年奋斗两年终于成立保守青年组织</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694617.md#1">纽约市警局更新罚则 执勤时如有种族歧视或遭解雇</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/18/n12694720.md#1">纽约市议会皇后区第29选区民主党初选参选人论坛</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/5/n3581747.md#1">加拿大总理 政要祝贺法轮大法洪传20周年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/7/n3582961.md#1">香港游行庆大法洪传 中港民众齐支持</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/8/n3583692.md#1">洛杉矶欢庆世界法轮大法日</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/9/n3584596.md#1">波士顿庆世界法轮大法日 有缘人喜得法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/11/n3586649.md#1">大陆法轮功学员恭祝法轮大法洪传二十周年（三）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690281.md#1">飞机引擎技术 中共输在哪里？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690284.md#1">郑小清涉盗GE机密案 被判共谋经济间谍罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690243.md#1">公交线路重新设计 法拉盛5月10日公听</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690175.md#1">见义勇为抓歹徒 父子获国会褒奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690183.md#1">在基层与官员间架起桥梁 臧东慧竞选民主党党代表</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/injttp3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/11/n12681201.md#1">【珍言真语】姜嘉伟：外星人和UFO探秘</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12692517.md#1">【财商天下】美国大媒体的中国生意</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/17/n12693173.md#1">【唐青看时事】可防可控秘诀 砸了中美关系的锅</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12692722.md#1">中国疫情严重 河北廊坊等地出现“随地倒”</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691475.md#1">蚂蚁集团成立整改组 马云被指服软认错了</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691267.md#1">余苑绮少外食戒油炸仍罹癌 营养师点出关键</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12689631.md#1">【专访】王彩桦：心存善念 人生没有过不去的关卡</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12691425.md#1">59岁张学友近况曝光 胡须斑白双颊凹陷</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12691628.md#1">《末日激战》影评：机器人元素 让核武危机更有看点</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/15/n12689933.md#1">好疗愈 两只法斗犬与沙发撞衫 往上一趴就隐身</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12691636.md#1">【重播】洛杉矶停尸房告急 美国新变种严重吗？</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/14/n12688783.md#1">森林浴舒压又抗癌 实证3大疗愈功效</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/17/n12693215.md#1">“我不要治疗只要去台湾”马克杯网上出售</a></li>
-<li><a href="https://github.com/injttp3586/djy/blob/master/gb/21/1/16/n12692725.md#1">尿液出现2种颜色要小心！这些症状恐是肾脏病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/injttp3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/injttp3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/5/12/n3587207.htm">犹太人作曲家：一生都在等待法轮大法</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/5/12/n3587207.htm">犹太人作曲家：一生都在等待法轮大法</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/injttp3586/djy/blob/master/gb/12/5/12/n3587207.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/injttp3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/injttp3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/injttp3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/injttp3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/injttp3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/12/5/12/n3587207.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
